--- a/styles.css
+++ b/styles.css
@@ -187,3 +187,259 @@ header ul li a{
  -ms-transform:scale(0.8);
  -o-transform:scale(0.8);
 }
+
+
+@media only screen and (max-width: 948px ) {
+
+    
+  .content{
+    position:relative;
+    width:100%;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.content .textBox
+{
+ position:relative;
+ max-width:200px;
+}
+
+.content .textBox h2
+{
+color:#fff;
+font-size: 2em;
+line-height:1.6em;
+font-weight: 500;
+text-transform: uppercase;
+}
+
+.content .textBox h2 span{
+  font-size: 1.5em;
+}
+
+.content .textBox p{
+  color: #fff;
+}
+
+.content .textBox a{
+  display:inline-block;
+  margin-top:15px;
+  padding: 7px 10px;
+  background:#fff;
+  color:#111;                                                       
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  font-weight: 500;
+  letter-spacing: 0.2px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.content .imgBox
+{
+  width : 200px;
+  display : flex;
+  padding-right : 10px;
+  justify-content: flex-end;
+  margin-top: 50px;
+} 
+
+.content .imgBox img
+{
+max-width:180px;  
+}
+
+}
+
+
+@media only screen and (max-width: 500px ) {
+
+    section
+    {
+        position: relative;
+        width:100%;
+        min-height:100vh;
+        padding:50px;
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+        background: #0062be;
+        transition: 0.5s;
+        -webkit-transition: 0.5s;
+        -moz-transition: 0.5s;
+        -ms-transition: 0.5s;
+        -o-transition: 0.5s;
+    }
+    
+    header{
+        position: absolute;
+        top:0;
+        left:0;
+        width:100%;
+        padding:30px 30px;
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+    
+    }
+    
+    
+    header .logo{
+        position: relative;
+        max-width:38px;
+    }
+    
+    header ul{
+        position: relative;
+        display:flex;
+    }
+    
+    header ul li{
+      list-style: none;
+    }
+    
+    header ul li a{
+      display: inline-block;
+      color:#fff;
+      font-weight:200;
+      margin-left: 8px;
+      text-decoration: none;
+    
+      }
+    
+    .content{
+      position:relative;
+      width:100%;
+      display:flex;
+      justify-content: space-between;
+      align-items: center;
+  }
+  .content .textBox
+  {
+   position:relative;
+   max-width:190px;
+  }
+  
+  .content .textBox h2
+  {
+  color:#fff;
+  font-size: 1em;
+  line-height:1.5em;
+  font-weight: 400;
+  text-transform: uppercase;
+  }
+  
+  .content .textBox h2 span{
+    font-size: 1.8em;
+  }
+  
+  .content .textBox p{
+    color: #fff;
+  }
+  .content .textBox a{
+    display:inline-block;
+    margin-top:5px;
+    font-size: 12px;
+    padding: 5px ;
+    background:#fff;
+    color:#111;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    font-weight: 780;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+  .content .imgBox
+  {
+    width : 110px;
+    display : flex;
+    padding-right : 10px;
+    justify-content: flex-end;
+    margin-top: 50px;
+  } 
+  
+  .content .imgBox img
+  {
+  max-width:90px;  
+  }
+  
+  .thumb
+{
+    position:absolute;
+    left:50%;
+    bottom:10px;
+    transform:translateX(-50%) ;
+    -webkit-transform:translateX(-50%) ;
+    -moz-transform:translateX(-50%) ;
+    -ms-transform:translateX(-50%) ;
+    -o-transform:translateX(-50%) ;
+    display: flex;
+}
+
+.thumb li{
+   list-style:none;
+   display:inline-block;
+   margin:0 6px;
+   cursor:pointer;
+   transition:0.8s ;
+   -webkit-transition:0.8s ;
+   -moz-transition:0.8s ;
+   -ms-transition:0.8s ;
+   -o-transition:0.8s ;
+}
+.thumb li:hover{
+     transform: translateY(-20px);
+     -webkit-transform: translateY(-20px);
+     -moz-transform: translateY(-20px);
+     -ms-transform: translateY(-20px);
+     -o-transform: translateY(-20px);
+}
+.thumb li img {
+    max-width:27px;
+}
+
+.sci{
+    position:absolute;
+    top:50%;
+    right:10px;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.sci li{
+    list-style:none;
+
+}
+
+
+.sci li a
+{
+ display:inline-block;
+ filter:invert(1);
+ -webkit-filter:invert(1);
+ margin:2px 0;
+ transform:scale(0.5);
+ -webkit-transform:scale(0.5);
+ -moz-transform:scale(0.5);
+ -ms-transform:scale(0.5);
+ -o-transform:scale(0.5);
+}
+
+  }
+  
+
+
